# postgres-monitoring

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md
.github/workflows/: release.yml
files/: app.css
src/: main.rs  settings_model.rs
src/components/: input_bool.rs  input_i64.rs  input_string.rs  mod.rs
src/dialogs/: dialog_state.rs  mod.rs  render_confirmation.rs  render_dialog.rs
src/insights/: mod.rs
src/js_bridge/: get_time_zone.rs  mod.rs
src/models/: date_key.rs  db_info_http_model.rs  log_path_data_model.rs  mod.rs  pg_activity_http_model.rs  pg_db_size_http_model.rs  server_info.rs  time_zone.rs
src/server/: mod.rs
src/server/app_ctx/: app_ctx.rs
src/server/postgres/: db_info_repo.rs  mod.rs  postgres_repo.rs
src/states/: data_state.rs  location_state.rs  main_state.rs  mod.rs
src/storage_settings/: ctx_search.rs  log_level.rs  mod.rs  search_line.rs  selected_time_zone.rs
src/views/: envs_selector.rs  left_panel.rs  mod.rs  render_db_size.rs
src/views/dashboard/: mod.rs  render_dashboard.rs
